Changing loader to render inside results container. Added a z-index for the loader to sit above the map. Fixed JS to search for new loader every time it is requested as the elements are destroyed with every query.

--- a/app/assets/stylesheets/sections/listings/_search.scss
+++ b/app/assets/stylesheets/sections/listings/_search.scss
@@ -17,11 +17,12 @@ section.search#content {
     height: 32px;
     background: #e6e6e6;
     @include border-radius(8px);
+    z-index: 1002;
   }
   
   .google-map-wrapper, .google-map .inner {
-    height: 300px;
-
+    z-index: 1001;
+    
     @media (max-width: 480px) {
       height: 150px;
     }
@@ -29,6 +30,7 @@ section.search#content {
   
   #results.no_results {
      padding: 40px 0;
+     z-index: 1000;
      
      &.map {
        position: absolute;
